--- a/src/gui/branch_manager/MyEmployersScreen.fxml
+++ b/src/gui/branch_manager/MyEmployersScreen.fxml
@@ -4,55 +4,45 @@
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="managment.MyEmployersController">
+<VBox prefHeight="650.0" prefWidth="1010.0" stylesheets="@../general/GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="managment.MyEmployersController">
    <children>
-      <BorderPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <center>
-            <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+         <children>
+            <Label id="title_lbl" stylesheets="@../general/GeneralStyleSheet.css" text="My Employers" />
+         </children>
+      </HBox>
+      <VBox fx:id="waiting_for_approval_vbox" prefHeight="200.0" prefWidth="100.0">
+         <children>
+            <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                     <children>
-                        <Label id="title_lbl" stylesheets="@../general/GeneralStyleSheet.css" text="My Employers" />
-                     </children>
-                  </HBox>
-                  <VBox fx:id="waiting_for_approval_vbox" prefHeight="200.0" prefWidth="100.0">
-                     <children>
-                        <HBox prefHeight="100.0" prefWidth="200.0">
-                           <children>
-                              <Label styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="Waiting For Approval">
-                                 <HBox.margin>
-                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                 </HBox.margin>
-                              </Label>
-                           </children>
-                        </HBox>
-                        <Accordion fx:id="waiting_for_approval_accordion" />
-                     </children>
-                  </VBox>
-                  <Separator prefWidth="200.0" />
-                  <VBox fx:id="approved_vbox" prefHeight="200.0" prefWidth="100.0">
-                     <children>
-                        <HBox prefHeight="100.0" prefWidth="200.0">
-                           <children>
-                              <Label styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="Approved">
-                                 <HBox.margin>
-                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                 </HBox.margin>
-                              </Label>
-                           </children>
-                        </HBox>
-                        <Accordion fx:id="approved_accordion" />
-                     </children>
-                  </VBox>
+                  <Label styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="Waiting For Approval">
+                     <HBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </HBox.margin>
+                  </Label>
                </children>
-            </VBox>
-         </center>
-      </BorderPane>
+            </HBox>
+            <Accordion fx:id="waiting_for_approval_accordion" />
+         </children>
+      </VBox>
+      <Separator prefWidth="200.0" />
+      <VBox fx:id="approved_vbox" prefHeight="200.0" prefWidth="100.0">
+         <children>
+            <HBox prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Label styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="Approved">
+                     <HBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </HBox.margin>
+                  </Label>
+               </children>
+            </HBox>
+            <Accordion fx:id="approved_accordion" />
+         </children>
+      </VBox>
    </children>
-</AnchorPane>
+</VBox>
