--- a/src/gui/general/index2Screen.fxml
+++ b/src/gui/general/index2Screen.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Group?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -13,11 +12,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: #fff;" stylesheets="@GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="general.IndexControllerD">
+<VBox alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: #fff;" stylesheets="@GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="general.IndexControllerD">
    <children>
-      <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" VBox.vgrow="ALWAYS">
+      <BorderPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" VBox.vgrow="ALWAYS">
          <left>
-            <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="663.0" prefWidth="270.0" BorderPane.alignment="CENTER">
+            <VBox prefHeight="663.0" prefWidth="270.0" BorderPane.alignment="CENTER">
                <children>
                   <HBox alignment="CENTER" prefHeight="655.0" prefWidth="211.0" style="-fx-background-color: #F7C665;" VBox.vgrow="ALWAYS">
                      <children>
@@ -43,7 +42,7 @@
             </VBox>
          </left>
          <top>
-            <HBox layoutX="100.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="145.0" prefWidth="999.0" BorderPane.alignment="CENTER">
+            <AnchorPane BorderPane.alignment="CENTER">
                <children>
                   <AnchorPane prefHeight="145.0" prefWidth="270.0" style="-fx-background-color: #F9E3B4;">
                      <children>
@@ -59,20 +58,20 @@
                         </Label>
                      </children>
                   </AnchorPane>
-                  <Label fx:id="welcome_label" alignment="CENTER" text="Welcome to BiteMe" translateX="220.0" HBox.hgrow="ALWAYS">
+                  <Label fx:id="welcome_label" alignment="CENTER" layoutX="261.0" layoutY="26.0" text="Welcome to BiteMe" textAlignment="CENTER" translateX="220.0" AnchorPane.bottomAnchor="26.0" AnchorPane.leftAnchor="261.0" AnchorPane.rightAnchor="462.0" AnchorPane.topAnchor="26.0">
                      <font>
                         <Font name="Levenim MT Bold" size="64.0" />
                      </font>
                   </Label>
                </children>
-            </HBox>
+            </AnchorPane>
          </top>
          <center>
-            <Group BorderPane.alignment="CENTER">
+            <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1010.0">
                <children>
-                  <AnchorPane fx:id="paneInPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="650.0" prefWidth="1010.0" style="-fx-background-color: #fff;" />
+                  <VBox fx:id="pane_in_vbox" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                </children>
-            </Group>
+            </AnchorPane>
          </center>
       </BorderPane>
    </children>
