--- a/src/gui/order/ChooseSupplierScreen.fxml
+++ b/src/gui/order/ChooseSupplierScreen.fxml
@@ -1,24 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
-<VBox prefHeight="650.0" prefWidth="1010.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="order.ChooseSupplierController">
+<VBox prefHeight="650.0" prefWidth="1010.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="order.ChooseSupplierController">
    <children>
       <Pane prefHeight="650.0" prefWidth="1010.0">
          <children>
-            <Button fx:id="view_menu_btn" layoutX="464.0" layoutY="369.0" mnemonicParsing="false" onAction="#viewMenu" styleClass="btn" stylesheets="@../general/GeneralStyleSheet.css" text="View Menu" />
-            <ComboBox fx:id="choose_branch_combo_box" layoutX="431.0" layoutY="287.0" prefHeight="31.0" prefWidth="155.0" promptText="Choose Restaurant" styleClass="comboBox" stylesheets="@../general/GeneralStyleSheet.css" />
+            <ComboBox fx:id="choose_branch_combo_box" layoutX="411.0" layoutY="214.0" prefHeight="31.0" prefWidth="189.0" promptText="Choose Restaurant" styleClass="comboBox" stylesheets="@../general/GeneralStyleSheet.css" />
             <Button fx:id="back_btn" layoutX="23.0" layoutY="591.0" mnemonicParsing="false" onAction="#back" prefHeight="35.0" prefWidth="57.0" styleClass="btn" stylesheets="@../general/GeneralStyleSheet.css" text="Back" />
-            <Label id="title_lbl" alignment="CENTER" layoutX="348.0" layoutY="178.0" prefHeight="45.0" prefWidth="315.0" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="Restaurant" textAlignment="CENTER" textFill="#333333">
-               <font>
-                  <Font name="SansSerif Bold" size="18.0" />
-               </font>
-            </Label>
+            <HBox alignment="CENTER" layoutX="405.0" layoutY="333.0" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Button fx:id="delivery_btn" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#delivery" stylesheets="@../general/GeneralStyleSheet.css" text="Delivery">
+                     <HBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </HBox.margin>
+                     <styleClass>
+                        <String fx:value="btn" />
+                        <String fx:value="btn" />
+                     </styleClass>
+                  </Button>
+                  <Button fx:id="take_away_btn" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#takeAway" styleClass="btn" stylesheets="@../general/GeneralStyleSheet.css" text="Take-Away">
+                     <HBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </HBox.margin>
+                  </Button>
+               </children>
+            </HBox>
          </children>
       </Pane>
    </children>
