--- a/bin/report/PurchaseReport.fxml
+++ b/bin/report/PurchaseReport.fxml
@@ -4,32 +4,32 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/16" fx:controller="report.PurchaseReportController">
+<VBox prefHeight="650.0" prefWidth="1010.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="report.IncomeReportController">
    <children>
-      <Pane prefHeight="400.0" prefWidth="600.0">
+      <Pane prefHeight="650.0" prefWidth="1010.0">
          <children>
-            <Label alignment="CENTER" layoutX="184.0" layoutY="42.0" text="Purchase report">
+            <Label alignment="CENTER" layoutX="300.0" layoutY="29.0" prefHeight="53.0" prefWidth="343.0" text="Purchase report">
                <font>
                   <Font size="36.0" />
                </font>
             </Label>
-            <Label layoutX="55.0" layoutY="143.0" text="Branch:" />
-            <Label layoutX="55.0" layoutY="200.0" text="Month:" />
+            <Label layoutX="31.0" layoutY="106.0" text="Branch:" />
+            <Label layoutX="31.0" layoutY="154.0" text="Month:" />
             <Label fx:id="whichBranch" layoutX="108.0" layoutY="143.0" />
             <Label fx:id="whichMonth" layoutX="108.0" layoutY="200.0" />
-            <TableView fx:id="purchaseTable" layoutX="201.0" layoutY="127.0" prefHeight="200.0" prefWidth="260.0">
+            <TableView fx:id="purchaseTable" layoutX="201.0" layoutY="127.0" prefHeight="224.0" prefWidth="576.0">
               <columns>
-                <TableColumn fx:id="restaurantCol" prefWidth="72.79998779296875" text="restaurant" />
-                <TableColumn fx:id="sumOfPurchasesCol" prefWidth="188.0" text="total purchases from restaurant" />
+                <TableColumn fx:id="restaurantCol" prefWidth="152.0" text="restaurant" />
+                <TableColumn fx:id="sumOfPurchasesCol" prefWidth="253.0" text="total purchases from restaurant" />
               </columns>
             </TableView>
-            <Button fx:id="backBtn" layoutX="513.0" layoutY="344.0" mnemonicParsing="false" onAction="#goBack" text="back" />
+            <Button fx:id="backBtn" layoutX="30.0" layoutY="579.0" mnemonicParsing="false" onAction="#goBack" text="back" />
          </children>
       </Pane>
    </children>
-</AnchorPane>
+</VBox>
