--- a/bin/report/ReportsScreen.fxml
+++ b/bin/report/ReportsScreen.fxml
@@ -2,23 +2,23 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="report.ReportController">
+<VBox prefHeight="650.0" prefWidth="1010.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="report.ReportController">
    <children>
-      <Pane prefHeight="400.0" prefWidth="600.0">
+      <Pane prefHeight="650.0" prefWidth="1010.0">
          <children>
-            <Label alignment="CENTER" layoutX="181.0" layoutY="79.0" prefHeight="53.0" prefWidth="239.0" text="reports">
+            <Label alignment="CENTER" layoutX="386.0" layoutY="62.0" prefHeight="53.0" prefWidth="239.0" text="reports">
                <font>
                   <Font size="36.0" />
                </font>
             </Label>
-            <Button fx:id="viewReportButton" layoutX="68.0" layoutY="262.0" mnemonicParsing="false" onAction="#goToViewReports" text="view monthly report" />
-            <Button fx:id="createReportButton" layoutX="408.0" layoutY="262.0" mnemonicParsing="false" onAction="#goToCreateReports" text="create quarter report" />
+            <Button fx:id="viewReportButton" layoutX="70.0" layoutY="310.0" mnemonicParsing="false" onAction="#goToViewReports" text="view monthly report" />
+            <Button fx:id="createReportButton" layoutX="712.0" layoutY="310.0" mnemonicParsing="false" onAction="#goToCreateReports" text="create quarter report" />
+            <Button fx:id="viewQuarterIncome" layoutX="392.0" layoutY="310.0" mnemonicParsing="false" onAction="#goToChooseQuarterAndBranch" text="view quarter income report" />
          </children>
       </Pane>
    </children>
-</AnchorPane>
+</VBox>
