--- a/bin/report/ViewReports.fxml
+++ b/bin/report/ViewReports.fxml
@@ -3,13 +3,14 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="report.ViewReportsController">
+
+<VBox xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="report.ViewReportsController">
    <children>
-      <Pane prefHeight="400.0" prefWidth="600.0">
+      <Pane prefHeight="650.0" prefWidth="1010.0">
          <children>
             <Label layoutX="254.0" layoutY="33.0" text="View Reports">
                <font>
@@ -19,12 +20,12 @@
             <Label layoutX="70.0" layoutY="101.0" text="Choose branch:" />
             <Label layoutX="70.0" layoutY="167.0" text="Choose month:" />
             <Label layoutX="70.0" layoutY="234.0" text="Choose a report:" />
-            <ComboBox fx:id="branchCombox" layoutX="174.0" layoutY="106.0" prefWidth="150.0" promptText="branch" visibleRowCount="3" />
-            <ComboBox fx:id="monthCombox" layoutX="174.0" layoutY="171.0" prefWidth="150.0" promptText="month" visibleRowCount="12" />
-            <ComboBox fx:id="typeCombox" layoutX="174.0" layoutY="230.0" prefWidth="150.0" promptText="type" visibleRowCount="3" />
-            <Button fx:id="viewBtn" layoutX="174.0" layoutY="328.0" mnemonicParsing="false" onAction="#goToRep" text="view" />
-            <Button fx:id="backButton" layoutX="462.0" layoutY="328.0" mnemonicParsing="false" onAction="#goToReportScreen" text="back" />
+            <ComboBox fx:id="branchCombox" layoutX="214.0" layoutY="107.0" prefWidth="150.0" promptText="branch" visibleRowCount="3" />
+            <ComboBox fx:id="monthCombox" layoutX="214.0" layoutY="173.0" prefWidth="150.0" promptText="month" visibleRowCount="12" />
+            <ComboBox fx:id="typeCombox" layoutX="214.0" layoutY="229.0" prefWidth="150.0" promptText="type" visibleRowCount="3" />
+            <Button fx:id="viewBtn" layoutX="455.0" layoutY="295.0" mnemonicParsing="false" onAction="#goToRep" text="view" />
+            <Button fx:id="backButton" layoutX="45.0" layoutY="580.0" mnemonicParsing="false" onAction="#goToReportScreen" text="back" />
          </children>
       </Pane>
    </children>
-</AnchorPane>
+</VBox>
