--- a/src/gui/report/QuarterlyDelaySupplyReport.fxml
+++ b/src/gui/report/QuarterlyDelaySupplyReport.fxml
@@ -4,16 +4,16 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="report.QuarterlyDelaySupplyReportController">
+<VBox prefHeight="650.0" prefWidth="1010.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="report.QuarterlyDelaySupplyReportController">
    <children>
-      <Pane prefHeight="400.0" prefWidth="600.0">
+      <Pane prefHeight="650.0" prefWidth="1010.0" VBox.vgrow="ALWAYS">
          <children>
-            <Label alignment="CENTER" layoutX="165.0" layoutY="14.0" text="Delay supply report">
+            <Label alignment="CENTER" layoutX="283.0" layoutY="24.0" text="Delay supply report">
                <font>
                   <Font size="36.0" />
                </font>
@@ -22,14 +22,14 @@
             <Label layoutX="43.0" layoutY="130.0" text="Quarter:" />
             <Label fx:id="whichBranch" layoutX="100.0" layoutY="91.0" />
             <Label fx:id="whichQuarter" layoutX="100.0" layoutY="130.0" />
-            <TableView layoutX="220.0" layoutY="100.0" prefHeight="200.0" prefWidth="200.0">
+            <TableView layoutX="220.0" layoutY="100.0" prefHeight="228.0" prefWidth="643.0">
               <columns>
                 <TableColumn fx:id="restaurantNameCol" prefWidth="96.800048828125" text="restaurant" />
-                <TableColumn fx:id="amountOdDelayCol" prefWidth="102.39996337890625" text="delays amount" />
+                <TableColumn fx:id="amountOdDelayCol" prefWidth="185.0" text="delays amount" />
               </columns>
             </TableView>
-            <Button fx:id="backBtn" layoutX="499.0" layoutY="332.0" mnemonicParsing="false" onAction="#goBack" text="back" />
+            <Button fx:id="backBtn" layoutX="33.0" layoutY="571.0" mnemonicParsing="false" onAction="#goBack" text="back" />
          </children>
       </Pane>
    </children>
-</AnchorPane>
+</VBox>
