--- a/bin/order/OrderInformationScreen.fxml
+++ b/bin/order/OrderInformationScreen.fxml
@@ -15,8 +15,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-
-<VBox xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="order.OrderInformationController">
+<VBox xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="order.OrderInformationController">
    <children>
       <AnchorPane prefHeight="600.0" prefWidth="800.0">
          <children>
@@ -41,6 +40,7 @@
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                  </HBox.margin>
                               </DatePicker>
+                              <Label fx:id="time_error" textFill="#ff0404" />
                            </children>
                         </HBox>
                         <HBox alignment="CENTER" prefHeight="287.0" prefWidth="800.0">
@@ -136,6 +136,21 @@
                                              <GridPane.margin>
                                                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                              </GridPane.margin>
+                                          </HBox>
+                                          <Label fx:id="phone_error" textFill="#f50000" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+                                          <Label fx:id="company_error" textFill="RED" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+                                          <Label fx:id="street_error" textFill="#ff0202" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+                                          <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="3">
+                                             <children>
+                                                <Label fx:id="last_name_error" textFill="#f50202" />
+                                                <Label fx:id="first_name_error" textFill="#f80000" />
+                                             </children>
+                                          </HBox>
+                                          <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="7">
+                                             <children>
+                                                <Label fx:id="city_error" textFill="RED" />
+                                                <Label fx:id="zip_error" textFill="RED" />
+                                             </children>
                                           </HBox>
                                        </children>
                                        <padding>
