--- a/bin/general/GeneralStyleSheet.css
+++ b/bin/general/GeneralStyleSheet.css
@@ -81,7 +81,7 @@
 }
 
 .comboBox{
-    -fx-background-color: rgba(255,255,255,0.3);
+    -fx-background-color: #FFFAF0;
     -fx-background-radius: 30;
 }
 
