--- a/src/gui/hr/ApproveUserScreen.fxml
+++ b/src/gui/hr/ApproveUserScreen.fxml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-
 
 <VBox xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="managment.ApproveAcountController">
    <children>
@@ -25,6 +25,14 @@
                   <VBox prefHeight="597.0" prefWidth="1010.0">
                      <children>
                         <Accordion fx:id="user_accordion" prefHeight="606.0" prefWidth="1010.0" styleClass="accordion" />
+                        <Label fx:id="msglbl" alignment="CENTER" prefHeight="17.0" prefWidth="1020.0">
+                           <VBox.margin>
+                              <Insets bottom="500.0" />
+                           </VBox.margin>
+                           <font>
+                              <Font name="System Bold" size="30.0" />
+                           </font>
+                        </Label>
                      </children>
                   </VBox>
                </children>
