--- a/bin/order/CartScreen.fxml
+++ b/bin/order/CartScreen.fxml
@@ -4,24 +4,18 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-
-<VBox xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="order.CartController">
+<VBox xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="order.CartController">
    <children>
-      <AnchorPane>
-         <children>
-            <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <ScrollPane hbarPolicy="NEVER">
+         <content>
+            <VBox>
                <children>
                   <HBox>
                      <children>
-                        <ScrollPane hbarPolicy="NEVER" styleClass="transparent" stylesheets="@../general/GeneralStyleSheet.css">
-                           <content>
-                              <VBox fx:id="cart_items_vbox" />
-                           </content>
-                        </ScrollPane>
+                        <VBox fx:id="cart_items_vbox" />
                      </children>
                   </HBox>
                   <HBox minHeight="-Infinity" minWidth="-Infinity">
@@ -51,7 +45,7 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
             </VBox>
-         </children>
-      </AnchorPane>
+         </content>
+      </ScrollPane>
    </children>
 </VBox>
