--- a/src/gui/order/BranchMenuScreen.fxml
+++ b/src/gui/order/BranchMenuScreen.fxml
@@ -53,6 +53,9 @@
                            <image>
                               <Image url="@../img/cart.png" />
                            </image>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
                         </ImageView>
                      </children>
                   </HBox>
@@ -80,18 +83,27 @@
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </VBox.margin>
                         </VBox>
-                        <Button fx:id="add_btn" mnemonicParsing="false" onAction="#addToOrder" prefHeight="22.0" prefWidth="149.0" stylesheets="@../general/GeneralStyleSheet.css" text="Add To Order" textAlignment="CENTER">
-                           <opaqueInsets>
-                              <Insets />
-                           </opaqueInsets>
-                           <styleClass>
-                              <String fx:value="btn" />
-                              <String fx:value="add-btn" />
-                           </styleClass>
-                           <VBox.margin>
-                              <Insets bottom="10.0" />
-                           </VBox.margin>
-                        </Button>
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+                           <children>
+                              <Button fx:id="add_btn" mnemonicParsing="false" onAction="#addToOrder" prefHeight="22.0" prefWidth="149.0" stylesheets="@../general/GeneralStyleSheet.css" text="Add To Order" textAlignment="CENTER">
+                                 <opaqueInsets>
+                                    <Insets />
+                                 </opaqueInsets>
+                                 <styleClass>
+                                    <String fx:value="btn" />
+                                    <String fx:value="add-btn" />
+                                 </styleClass>
+                                 <HBox.margin>
+                                    <Insets left="30.0" />
+                                 </HBox.margin>
+                              </Button>
+                              <ImageView fx:id="green_v_img" fitHeight="21.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true" visible="false">
+                                 <image>
+                                    <Image url="@../img/greenv.png" />
+                                 </image>
+                              </ImageView>
+                           </children>
+                        </HBox>
                      </children>
                   </VBox>
                   <HBox alignment="BOTTOM_CENTER" layoutY="474.0" prefWidth="356.0">
