--- a/src/gui/order/ChooseSupplierScreen.fxml
+++ b/src/gui/order/ChooseSupplierScreen.fxml
@@ -1,38 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.String?>
-<?import javafx.geometry.Insets?>
+<?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="650.0" prefWidth="1010.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="order.ChooseSupplierController">
+<VBox alignment="CENTER" prefHeight="650.0" prefWidth="1010.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="order.ChooseSupplierController">
    <children>
-      <Pane prefHeight="650.0" prefWidth="1010.0">
+      <Group VBox.vgrow="ALWAYS">
          <children>
-            <ComboBox fx:id="choose_branch_combo_box" layoutX="411.0" layoutY="214.0" prefHeight="31.0" prefWidth="189.0" promptText="Choose Restaurant" styleClass="comboBox" stylesheets="@../general/GeneralStyleSheet.css" />
-            <Button fx:id="back_btn" layoutX="23.0" layoutY="591.0" mnemonicParsing="false" onAction="#back" prefHeight="35.0" prefWidth="57.0" styleClass="btn" stylesheets="@../general/GeneralStyleSheet.css" text="Back" />
-            <HBox alignment="CENTER" layoutX="405.0" layoutY="333.0" prefHeight="100.0" prefWidth="200.0">
-               <children>
-                  <Button fx:id="delivery_btn" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#delivery" stylesheets="@../general/GeneralStyleSheet.css" text="Delivery">
-                     <HBox.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </HBox.margin>
-                     <styleClass>
-                        <String fx:value="btn" />
-                        <String fx:value="btn" />
-                     </styleClass>
-                  </Button>
-                  <Button fx:id="take_away_btn" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#takeAway" styleClass="btn" stylesheets="@../general/GeneralStyleSheet.css" text="Take-Away">
-                     <HBox.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </HBox.margin>
-                  </Button>
-               </children>
-            </HBox>
+            <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="650.0" prefWidth="1010.0">
+               <center>
+                  <VBox alignment="CENTER" BorderPane.alignment="CENTER">
+                     <children>
+                        <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="650.0" prefWidth="1010.0" VBox.vgrow="ALWAYS">
+                           <children>
+                              <ComboBox fx:id="choose_branch_combo_box" layoutX="416.0" layoutY="166.0" prefHeight="31.0" prefWidth="189.0" promptText="Choose Restaurant" styleClass="comboBox" stylesheets="@../general/GeneralStyleSheet.css" />
+                              <Button fx:id="back_btn" layoutX="23.0" layoutY="591.0" mnemonicParsing="false" onAction="#back" prefHeight="35.0" prefWidth="57.0" styleClass="btn" stylesheets="@../general/GeneralStyleSheet.css" text="Back" />
+                              <Button fx:id="delivery_btn" layoutX="405.0" layoutY="235.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#delivery" stylesheets="@../general/GeneralStyleSheet.css" text="Delivery">
+                                 <styleClass>
+                                    <String fx:value="btn" />
+                                    <String fx:value="btn" />
+                                 </styleClass>
+                              </Button>
+                              <Button fx:id="take_away_btn" layoutX="530.0" layoutY="235.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#takeAway" styleClass="btn" stylesheets="@../general/GeneralStyleSheet.css" text="Take-Away" />
+                           </children>
+                        </Pane>
+                     </children>
+                  </VBox>
+               </center>
+            </BorderPane>
          </children>
-      </Pane>
+      </Group>
    </children>
 </VBox>
