--- a/bin/general/UserLoginScreen.fxml
+++ b/bin/general/UserLoginScreen.fxml
@@ -54,7 +54,7 @@
                                     <Image url="@../img/LockIcon.png" />
                                  </image>
                               </ImageView>
-                              <Label fx:id="login_res_lbl" layoutX="320.0" layoutY="589.0" prefHeight="17.0" prefWidth="203.0" />
+                              <Label fx:id="login_res_lbl" layoutX="211.0" layoutY="589.0" prefHeight="17.0" prefWidth="397.0" textAlignment="CENTER" textFill="RED" />
                               <Button fx:id="import_btn" layoutX="396.0" layoutY="633.0" mnemonicParsing="false" onAction="#import_users" text="import" />
                            </children>
                         </AnchorPane>
