--- a/src/gui/report/IncomeReport.fxml
+++ b/src/gui/report/IncomeReport.fxml
@@ -8,8 +8,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<VBox prefHeight="650.0" prefWidth="1010.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="report.IncomeReportController">
+<VBox prefHeight="650.0" prefWidth="1010.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="report.IncomeReportController">
    <children>
       <Pane prefHeight="650.0" prefWidth="1010.0">
          <children>
@@ -24,8 +23,8 @@
             <Label fx:id="whichMonth" layoutX="75.0" layoutY="171.0" prefHeight="21.0" prefWidth="100.0" />
             <TableView fx:id="IncomeTable" layoutX="201.0" layoutY="127.0" prefHeight="397.0" prefWidth="725.0">
               <columns>
-                <TableColumn fx:id="restaurantCol" prefWidth="120.79998779296875" text="restaurant" />
-                <TableColumn fx:id="sumOfIncomeCol" prefWidth="140.0" text="total income (NIS)" />
+                <TableColumn fx:id="restaurantCol" prefWidth="324.0" text="restaurant" />
+                <TableColumn fx:id="sumOfIncomeCol" prefWidth="400.0" text="total income (NIS)" />
               </columns>
             </TableView>
             <Button fx:id="backBtn" layoutX="54.0" layoutY="563.0" mnemonicParsing="false" onAction="#goBack" text="back" />
