--- a/src/gui/report/ViewReports.fxml
+++ b/src/gui/report/ViewReports.fxml
@@ -2,29 +2,19 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
-
-<VBox xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="report.ViewReportsController">
+<VBox style="-fx-background-color: #fff;" stylesheets="@../general/GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="report.ViewReportsController">
    <children>
       <Pane prefHeight="650.0" prefWidth="1010.0">
          <children>
-            <Label layoutX="254.0" layoutY="33.0" text="View Reports">
-               <font>
-                  <Font size="24.0" />
-               </font>
-            </Label>
-            <Label layoutX="70.0" layoutY="101.0" text="Choose branch:" />
-            <Label layoutX="70.0" layoutY="167.0" text="Choose month:" />
-            <Label layoutX="70.0" layoutY="234.0" text="Choose a report:" />
-            <ComboBox fx:id="branchCombox" layoutX="214.0" layoutY="107.0" prefWidth="150.0" promptText="branch" visibleRowCount="3" />
-            <ComboBox fx:id="monthCombox" layoutX="214.0" layoutY="173.0" prefWidth="150.0" promptText="month" visibleRowCount="12" />
-            <ComboBox fx:id="typeCombox" layoutX="214.0" layoutY="229.0" prefWidth="150.0" promptText="type" visibleRowCount="3" />
-            <Button fx:id="viewBtn" layoutX="455.0" layoutY="295.0" mnemonicParsing="false" onAction="#goToRep" text="view" />
-            <Button fx:id="backButton" layoutX="45.0" layoutY="580.0" mnemonicParsing="false" onAction="#goToReportScreen" text="back" />
+            <ComboBox fx:id="branchCombox" layoutX="416.0" layoutY="187.0" prefWidth="150.0" promptText="Branch" styleClass="comboBox" visibleRowCount="3" />
+            <ComboBox fx:id="monthCombox" layoutX="416.0" layoutY="313.0" prefWidth="150.0" promptText="Month" styleClass="comboBox" visibleRowCount="12" />
+            <ComboBox fx:id="typeCombox" layoutX="416.0" layoutY="375.0" prefWidth="150.0" promptText="Type" styleClass="comboBox" visibleRowCount="3" />
+            <Button fx:id="viewBtn" layoutX="471.0" layoutY="453.0" mnemonicParsing="false" onAction="#goToRep" styleClass="ViewBtn" text="view" textAlignment="CENTER" />
+            <Button fx:id="backButton" layoutX="45.0" layoutY="580.0" mnemonicParsing="false" onAction="#goToReportScreen" styleClass="ViewBtn" text="back" />
+            <ComboBox fx:id="YearComboBox" layoutX="416.0" layoutY="254.0" prefWidth="150.0" promptText="Year" styleClass="comboBox" visibleRowCount="12" />
          </children>
       </Pane>
    </children>
