--- a/src/gui/report/IncomeReport.fxml
+++ b/src/gui/report/IncomeReport.fxml
@@ -6,17 +6,11 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
-<VBox prefHeight="650.0" prefWidth="1010.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="report.IncomeReportController">
+<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="650.0" prefWidth="1010.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="report.IncomeReportController">
    <children>
-      <Pane prefHeight="650.0" prefWidth="1010.0">
+      <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="650.0" prefWidth="1010.0" VBox.vgrow="ALWAYS">
          <children>
-            <Label alignment="CENTER" layoutX="357.0" layoutY="35.0" text="Income report">
-               <font>
-                  <Font size="36.0" />
-               </font>
-            </Label>
             <Label layoutX="14.0" layoutY="117.0" text="Branch:" />
             <Label layoutX="14.0" layoutY="171.0" text="Month:" />
             <Label fx:id="whichBranch" layoutX="75.0" layoutY="118.0" prefHeight="21.0" prefWidth="100.0" />
