--- a/src/gui/report/ViewReports.fxml
+++ b/src/gui/report/ViewReports.fxml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox style="-fx-background-color: #fff;" stylesheets="@../general/GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="report.ViewReportsController">
+<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="650.0" prefWidth="1010.0" style="-fx-background-color: #fff;" stylesheets="@../general/GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="report.ViewReportsController">
    <children>
-      <Pane prefHeight="650.0" prefWidth="1010.0">
+      <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="650.0" prefWidth="1010.0" VBox.vgrow="ALWAYS">
          <children>
             <ComboBox fx:id="branchCombox" layoutX="416.0" layoutY="187.0" prefWidth="150.0" promptText="Branch" styleClass="comboBox" visibleRowCount="3" />
             <ComboBox fx:id="monthCombox" layoutX="416.0" layoutY="313.0" prefWidth="150.0" promptText="Month" styleClass="comboBox" visibleRowCount="12" />
@@ -16,6 +17,9 @@
             <Button fx:id="backButton" layoutX="45.0" layoutY="580.0" mnemonicParsing="false" onAction="#goToReportScreen" styleClass="ViewBtn" text="back" />
             <ComboBox fx:id="YearComboBox" layoutX="416.0" layoutY="254.0" prefWidth="150.0" promptText="Year" styleClass="comboBox" visibleRowCount="12" />
          </children>
+         <VBox.margin>
+            <Insets />
+         </VBox.margin>
       </Pane>
    </children>
 </VBox>
