--- a/src/gui/report/reportsScreen.fxml
+++ b/src/gui/report/reportsScreen.fxml
@@ -1,23 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
-<VBox prefHeight="650.0" prefWidth="1010.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="report.ReportController">
+<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="650.0" prefWidth="1010.0" style="-fx-background-color: #fff;" stylesheets="@../general/GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="report.ReportController">
    <children>
-      <Pane prefHeight="650.0" prefWidth="1010.0">
+      <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="650.0" prefWidth="1010.0" VBox.vgrow="ALWAYS">
          <children>
-            <Label alignment="CENTER" layoutX="386.0" layoutY="62.0" prefHeight="53.0" prefWidth="239.0" text="reports">
-               <font>
-                  <Font size="36.0" />
-               </font>
-            </Label>
-            <Button fx:id="viewReportButton" layoutX="70.0" layoutY="310.0" mnemonicParsing="false" onAction="#goToViewReports" text="view monthly report" />
-            <Button fx:id="createReportButton" layoutX="712.0" layoutY="310.0" mnemonicParsing="false" onAction="#goToCreateReports" text="create quarter report" />
-            <Button fx:id="viewQuarterIncome" layoutX="392.0" layoutY="310.0" mnemonicParsing="false" onAction="#goToChooseQuarterAndBranch" text="view quarter income report" />
+            <Button fx:id="viewReportButton" layoutX="70.0" layoutY="310.0" mnemonicParsing="false" onAction="#goToViewReports" styleClass="ViewBtn" text="Monthly Reports" />
+            <Button fx:id="createReportButton" layoutX="712.0" layoutY="310.0" mnemonicParsing="false" onAction="#goToCreateReports" styleClass="ViewBtn" text="Create Quarter Report" />
+            <Button fx:id="viewQuarterIncome" layoutX="392.0" layoutY="310.0" mnemonicParsing="false" onAction="#goToChooseQuarterAndBranch" styleClass="ViewBtn" text="Quarter Reports" />
          </children>
       </Pane>
    </children>
