--- a/bin/order/CartItem.fxml
+++ b/bin/order/CartItem.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <VBox xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="order.CartItemController">
    <children>
@@ -15,15 +16,21 @@
                <children>
                   <HBox alignment="CENTER_LEFT">
                      <children>
-                        <Label fx:id="dish_name_lbl" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="Dish Name">
+                        <Label fx:id="dish_name_lbl" stylesheets="@../general/GeneralStyleSheet.css" text="Dish Name">
                            <HBox.margin>
                               <Insets right="10.0" />
                            </HBox.margin>
+                           <font>
+                              <Font name="Levenim MT Bold" size="12.0" />
+                           </font>
                         </Label>
-                        <Label fx:id="dish_price_label" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="Dish Price">
+                        <Label fx:id="dish_price_label" stylesheets="@../general/GeneralStyleSheet.css" text="Dish Price">
                            <HBox.margin>
                               <Insets left="10.0" right="10.0" />
                            </HBox.margin>
+                           <font>
+                              <Font name="Levenim MT Bold" size="12.0" />
+                           </font>
                         </Label>
                         <Button fx:id="remove_btn" mnemonicParsing="false" onAction="#removeItem" styleClass="minus-btn" stylesheets="@../general/GeneralStyleSheet.css" text="-" textFill="WHITE">
                            <HBox.margin>
