--- a/bin/order/UpdateScreen.fxml
+++ b/bin/order/UpdateScreen.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
@@ -9,37 +10,63 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<Pane id="changescreen" fx:id="update_pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.UpdateOrderController">
+
+<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="650.0" prefWidth="1010.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.UpdateOrderController">
    <children>
-      <TableView fx:id="OrderTable" layoutY="95.0" prefHeight="429.0" prefWidth="1280.0">
-        <columns>
-          <TableColumn fx:id="order_col" prefWidth="55.0" text="Order" />
-          <TableColumn fx:id="resturant_col" prefWidth="190.0" text="Resturant" />
-            <TableColumn fx:id="order_type_col" prefWidth="192.0" text="Order Type" />
-            <TableColumn fx:id="phone_col" prefWidth="268.0" text="Phone-Number" />
-            <TableColumn fx:id="time_col" prefWidth="240.0" text="Time of Order" />
-            <TableColumn fx:id="address_col" prefWidth="334.0" text="Order Address" />
-        </columns>
-      </TableView>
-      <Label id="title" layoutX="537.0" layoutY="26.0" text="Change Order">
-         <font>
-            <Font size="40.0" />
-         </font>
-      </Label>
-      <Button fx:id="back_btn" layoutX="594.0" layoutY="743.0" mnemonicParsing="false" onAction="#back_to_index" prefHeight="25.0" prefWidth="85.0" styleClass="btn" text="Back" />
-      <Label layoutX="422.0" layoutY="611.0" styleClass="lbl" text="Order Address" />
-      <Label layoutX="431.0" layoutY="662.0" styleClass="lbl" text="Order Type" />
-      <ComboBox id="cmbOrder" fx:id="updated_type" layoutX="565.0" layoutY="658.0" prefWidth="150.0" promptText="Choose Delivery Type" />
-      <TextField fx:id="updated_address" layoutX="565.0" layoutY="607.0" promptText="Ex. Hertzel 16" />
-      <Button fx:id="update_btn" disable="true" layoutX="741.0" layoutY="632.0" mnemonicParsing="false" onAction="#updateOrder" prefHeight="25.0" prefWidth="125.0" styleClass="btn" text="Update Order">
-         <tooltip>
-            <Tooltip fx:id="update_order_tooltip" />
-         </tooltip></Button>
-      <Label fx:id="selected_order" layoutX="411.0" layoutY="546.0" prefHeight="17.0" prefWidth="456.0" />
+      <Pane id="changescreen" fx:id="update_pane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1010.0">
+         <children>
+            <TableView fx:id="OrderTable" layoutX="18.0" layoutY="108.0" prefHeight="382.0" prefWidth="983.0">
+              <columns>
+                <TableColumn fx:id="order_col" prefWidth="79.0" text="Order" />
+                <TableColumn fx:id="resturant_col" prefWidth="116.0" text="Resturant" />
+                  <TableColumn fx:id="order_type_col" prefWidth="176.0" text="Order Type" />
+                  <TableColumn fx:id="phone_col" prefWidth="197.0" text="Phone-Number" />
+                  <TableColumn fx:id="time_col" prefWidth="124.0" text="Time of Order" />
+                  <TableColumn fx:id="address_col" prefWidth="308.0" text="Order Address" />
+              </columns>
+            </TableView>
+            <Label id="title" layoutX="372.0" layoutY="24.0" styleClass="lblWitoutSize" stylesheets="@../general/GeneralStyleSheet.css" text="Change Order">
+               <font>
+                  <Font size="40.0" />
+               </font>
+            </Label>
+            <Button fx:id="back_btn" layoutX="29.0" layoutY="589.0" mnemonicParsing="false" onAction="#back_to_index" prefHeight="25.0" prefWidth="85.0" stylesheets="@../general/GeneralStyleSheet.css" text="Back">
+               <styleClass>
+                  <String fx:value="ViewBtn" />
+                  <String fx:value="lbl" />
+               </styleClass>
+            </Button>
+            <Label layoutX="365.0" layoutY="505.0" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="Order Address" />
+            <Label layoutX="365.0" layoutY="544.0" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="Order Type" />
+            <ComboBox id="cmbOrder" fx:id="updated_type" layoutX="489.0" layoutY="537.0" prefHeight="36.0" prefWidth="160.0" promptText="Choose Delivery Type" stylesheets="@../general/GeneralStyleSheet.css">
+               <styleClass>
+                  <String fx:value="comboBox" />
+                  <String fx:value="lbl" />
+               </styleClass>
+            </ComboBox>
+            <TextField fx:id="updated_address" layoutX="485.0" layoutY="498.0" prefHeight="34.0" prefWidth="160.0" promptText="Ex. Hertzel 16" stylesheets="@../general/GeneralStyleSheet.css">
+               <styleClass>
+                  <String fx:value="lbl" />
+                  <String fx:value="comboBox" />
+               </styleClass>
+            </TextField>
+            <Button fx:id="update_btn" disable="true" layoutX="674.0" layoutY="534.0" mnemonicParsing="false" onAction="#updateOrder" prefHeight="43.0" prefWidth="123.0" stylesheets="@../general/GeneralStyleSheet.css" text="Update Order">
+               <tooltip>
+                  <Tooltip fx:id="update_order_tooltip" />
+               </tooltip>
+               <styleClass>
+                  <String fx:value="ViewBtnOrange" />
+                  <String fx:value="lbl" />
+               </styleClass>
+            </Button>
+            <Label fx:id="selected_order" layoutX="400.0" layoutY="547.0" prefHeight="17.0" prefWidth="456.0" />
+         </children>
+         <stylesheets>
+            <URL value="@/general/GeneralStyleSheet.css" />
+         </stylesheets>
+      </Pane>
    </children>
-   <stylesheets>
-      <URL value="@/general/GeneralStyleSheet.css" />
-   </stylesheets>
-</Pane>
+</VBox>
