--- a/bin/server/serverFXML.fxml
+++ b/bin/server/serverFXML.fxml
@@ -1,29 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-
 
 <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="server.serverController">
    <children>
       <BorderPane prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
          <center>
-            <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+            <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="800.0" prefWidth="1200.0" style="-fx-background-color: #fff;" BorderPane.alignment="CENTER">
                <children>
                   <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                      <children>
-                        <Label fx:id="IP_label" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="IP">
+                        <Label fx:id="IP_label" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="IP" translateX="-40.0">
                            <HBox.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </HBox.margin>
                         </Label>
-                        <TextField fx:id="ip_input" styleClass="text-box" stylesheets="@../general/GeneralStyleSheet.css" text="localhost" />
+                        <TextField fx:id="ip_input" styleClass="comboBox" stylesheets="@../general/GeneralStyleSheet.css" text="localhost" translateX="18.0" />
                      </children>
                      <VBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -31,12 +33,12 @@
                   </HBox>
                   <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                      <children>
-                        <Label fx:id="Port_label" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="Port">
+                        <Label fx:id="Port_label" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="Port" translateX="-25.0">
                            <HBox.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </HBox.margin>
                         </Label>
-                        <TextField fx:id="port_input" styleClass="text-box" stylesheets="@../general/GeneralStyleSheet.css" text="5555">
+                        <TextField fx:id="port_input" styleClass="comboBox" stylesheets="@../general/GeneralStyleSheet.css" text="5555" translateX="15.0">
                            <HBox.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </HBox.margin>
@@ -45,22 +47,22 @@
                   </HBox>
                   <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" stylesheets="@../general/GeneralStyleSheet.css">
                      <children>
-                        <Label fx:id="db_name_label" text="DB Name">
+                        <Label fx:id="db_name_label" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="DB Name" translateX="-18.0">
                            <HBox.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </HBox.margin>
                         </Label>
-                        <TextField fx:id="db_name_input" styleClass="text-box" stylesheets="@../general/GeneralStyleSheet.css" text="biteme" />
+                        <TextField fx:id="db_name_input" styleClass="comboBox" stylesheets="@../general/GeneralStyleSheet.css" text="biteme" />
                      </children>
                   </HBox>
                   <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                      <children>
-                        <Label fx:id="db_user_label" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="DB User">
+                        <Label fx:id="db_user_label" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="DB User" translateX="-20.0">
                            <HBox.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </HBox.margin>
                         </Label>
-                        <TextField fx:id="db_user_input" styleClass="text-box" stylesheets="@../general/GeneralStyleSheet.css" text="root" />
+                        <TextField fx:id="db_user_input" styleClass="comboBox" stylesheets="@../general/GeneralStyleSheet.css" text="root" translateX="10.0" />
                      </children>
                   </HBox>
                   <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" stylesheets="@../general/GeneralStyleSheet.css">
@@ -70,37 +72,54 @@
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </HBox.margin>
                         </Label>
-                        <PasswordField fx:id="db_pass_input" styleClass="text-box" stylesheets="@../general/GeneralStyleSheet.css" text="Aa123456" />
+                        <PasswordField fx:id="db_pass_input" styleClass="comboBox" stylesheets="@../general/GeneralStyleSheet.css" text="Aa123456" />
                      </children>
                   </HBox>
                   <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                      <children>
-                        <Button fx:id="connect_btn" mnemonicParsing="false" onAction="#connectToDB" styleClass="btn" stylesheets="@../general/GeneralStyleSheet.css" text="Connect">
-                           <HBox.margin>
-                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                           </HBox.margin>
-                        </Button>
-                        <Button fx:id="disconnect_btn" mnemonicParsing="false" onAction="#disconnectFromDB" styleClass="btn" stylesheets="@../general/GeneralStyleSheet.css" text="Disconnect">
-                           <HBox.margin>
-                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                           </HBox.margin>
-                        </Button>
-                        <Label fx:id="connect_status" text="    ">
+                        <Label fx:id="connect_status" prefHeight="22.0" prefWidth="239.0" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="    " translateX="400.0">
                            <HBox.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </HBox.margin>
                         </Label>
+                        <Button fx:id="connect_btn" mnemonicParsing="false" onAction="#connectToDB" stylesheets="@../general/GeneralStyleSheet.css" text="Connect" translateX="-150.0">
+                           <HBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </HBox.margin>
+                           <styleClass>
+                              <String fx:value="ViewBtnOrange" />
+                              <String fx:value="lbl" />
+                           </styleClass>
+                        </Button>
+                        <Button fx:id="disconnect_btn" mnemonicParsing="false" onAction="#disconnectFromDB" stylesheets="@../general/GeneralStyleSheet.css" text="Disconnect" translateX="-70.0">
+                           <HBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </HBox.margin>
+                           <styleClass>
+                              <String fx:value="ViewBtn" />
+                              <String fx:value="lbl" />
+                           </styleClass>
+                        </Button>
                      </children>
                   </HBox>
                   <HBox alignment="BASELINE_CENTER" prefHeight="100.0" prefWidth="200.0">
                      <children>
-                        <Button fx:id="close_btn" mnemonicParsing="false" onAction="#close_window" styleClass="btn" stylesheets="@../general/GeneralStyleSheet.css" text="Close">
+                        <Button fx:id="close_btn" mnemonicParsing="false" onAction="#close_window" stylesheets="@../general/GeneralStyleSheet.css" text="Close" translateX="10.0">
                            <HBox.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </HBox.margin>
+                           <styleClass>
+                              <String fx:value="ViewBtn" />
+                              <String fx:value="lbl" />
+                           </styleClass>
                         </Button>
                      </children>
                   </HBox>
+                  <ImageView fitHeight="193.0" fitWidth="311.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../img/undraw_server_down_s4lk.png" />
+                     </image>
+                  </ImageView>
                </children>
             </VBox>
          </center>
