--- a/src/gui/general/UserLoginScreen.fxml
+++ b/src/gui/general/UserLoginScreen.fxml
@@ -1,67 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: #fff;" stylesheets="@GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="managment.UserLoginController">
+<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="general.ClientStartController">
    <children>
-      <BorderPane id="borderpane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" styleClass="borderpane" VBox.vgrow="ALWAYS">
-         <left>
-            <VBox prefHeight="800.0" prefWidth="410.0" styleClass="bitemelogo" BorderPane.alignment="CENTER" />
-         </left>
+      <BorderPane prefHeight="296.0" prefWidth="332.0">
          <center>
-            <Group BorderPane.alignment="CENTER">
+            <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
                <children>
-                  <HBox>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                      <children>
-                        <AnchorPane id="anchorpane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="803.0" prefWidth="870.0" style="-fx-background-color: #fff;" HBox.hgrow="ALWAYS">
-                           <children>
-                              <Label layoutX="326.0" layoutY="95.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Login">
-                                 <font>
-                                    <Font name="Levenim MT Bold" size="64.0" />
-                                 </font>
-                              </Label>
-                              <TextField id="test" fx:id="username_lbl" alignment="CENTER" layoutX="310.0" layoutY="369.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="25.0" prefWidth="220.0" promptText="Username" />
-                              <PasswordField fx:id="password_lbl" alignment="CENTER" layoutX="312.0" layoutY="454.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="25.0" prefWidth="219.0" promptText="Password" />
-                              <Button fx:id="login_btn" layoutX="388.0" layoutY="522.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#login_action" prefHeight="35.0" prefWidth="64.0" styleClass="ViewBtn" stylesheets="@GeneralStyleSheet.css" text="Login" />
-                              <ImageView fitHeight="120.0" fitWidth="135.0" layoutX="277.0" layoutY="209.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../img/FemaleIcon.png" />
-                                 </image>
-                              </ImageView>
-                              <ImageView fitHeight="120.0" fitWidth="135.0" layoutX="409.0" layoutY="209.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../img/MaleIcon.png" />
-                                 </image>
-                              </ImageView>
-                              <ImageView fitHeight="25.0" fitWidth="60.0" layoutX="278.0" layoutY="369.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../img/UserIcon.png" />
-                                 </image>
-                              </ImageView>
-                              <ImageView fitHeight="20.0" fitWidth="60.0" layoutX="280.0" layoutY="456.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../img/LockIcon.png" />
-                                 </image>
-                              </ImageView>
-                              <Label fx:id="login_res_lbl" layoutX="211.0" layoutY="589.0" prefHeight="17.0" prefWidth="397.0" textAlignment="CENTER" textFill="RED" />
-                              <Button fx:id="import_btn" layoutX="396.0" layoutY="633.0" mnemonicParsing="false" onAction="#import_users" text="import" />
-                           </children>
-                        </AnchorPane>
+                        <Label prefHeight="32.0" prefWidth="155.0" text="Enter server IP">
+                           <font>
+                              <Font name="System Bold" size="22.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Label text="If IP is not found, client will terminate" textFill="#ff0707">
+                           <font>
+                              <Font name="System Bold" size="16.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Label text="Server IP:" />
+                        <TextField fx:id="ip_address" promptText="Ex. 127.0.0.1" text="localhost" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Button fx:id="login_btn" mnemonicParsing="false" onAction="#LoginToServer" text="Login" />
                      </children>
                   </HBox>
                </children>
-            </Group>
+            </VBox>
          </center>
       </BorderPane>
    </children>
