--- a/src/gui/order/ChooseSupplierScreen.fxml
+++ b/src/gui/order/ChooseSupplierScreen.fxml
@@ -4,11 +4,14 @@
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" prefHeight="650.0" prefWidth="1010.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="order.ChooseSupplierController">
+<VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="650.0" prefWidth="1010.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="order.ChooseSupplierController">
    <children>
       <Group VBox.vgrow="ALWAYS">
          <children>
@@ -18,15 +21,43 @@
                      <children>
                         <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="650.0" prefWidth="1010.0" VBox.vgrow="ALWAYS">
                            <children>
-                              <ComboBox fx:id="choose_branch_combo_box" layoutX="416.0" layoutY="166.0" prefHeight="31.0" prefWidth="189.0" promptText="Choose Restaurant" styleClass="comboBox" stylesheets="@../general/GeneralStyleSheet.css" />
-                              <Button fx:id="back_btn" layoutX="23.0" layoutY="591.0" mnemonicParsing="false" onAction="#back" prefHeight="35.0" prefWidth="57.0" styleClass="btn" stylesheets="@../general/GeneralStyleSheet.css" text="Back" />
-                              <Button fx:id="delivery_btn" layoutX="405.0" layoutY="235.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#delivery" stylesheets="@../general/GeneralStyleSheet.css" text="Delivery">
+                              <ComboBox fx:id="choose_branch_combo_box" layoutX="411.0" layoutY="148.0" prefHeight="31.0" prefWidth="189.0" promptText="Choose Restaurant" styleClass="comboBox" stylesheets="@../general/GeneralStyleSheet.css" />
+                              <Button fx:id="back_btn" layoutX="23.0" layoutY="583.0" mnemonicParsing="false" onAction="#back" prefHeight="43.0" prefWidth="90.0" styleClass="ViewBtn" stylesheets="@../general/GeneralStyleSheet.css" text="Back">
+                                 <font>
+                                    <Font name="Levenim MT" size="13.0" />
+                                 </font></Button>
+                              <Button fx:id="delivery_btn" layoutX="568.0" layoutY="234.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#delivery" prefHeight="37.0" prefWidth="106.0" stylesheets="@../general/GeneralStyleSheet.css" text="Delivery">
+                                 <font>
+                                    <Font name="Levenim MT" size="13.0" />
+                                 </font>
                                  <styleClass>
-                                    <String fx:value="btn" />
-                                    <String fx:value="btn" />
+                                    <String fx:value="ViewBtnOrange" />
+                                    <String fx:value="lbl" />
                                  </styleClass>
                               </Button>
-                              <Button fx:id="take_away_btn" layoutX="530.0" layoutY="235.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#takeAway" styleClass="btn" stylesheets="@../general/GeneralStyleSheet.css" text="Take-Away" />
+                              <Button fx:id="take_away_btn" layoutX="341.0" layoutY="234.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#takeAway" prefHeight="36.0" prefWidth="105.0" stylesheets="@../general/GeneralStyleSheet.css" text="Take-Away">
+                                 <font>
+                                    <Font name="Levenim MT" size="13.0" />
+                                 </font>
+                                 <styleClass>
+                                    <String fx:value="ViewBtnOrange" />
+                                    <String fx:value="lbl" />
+                                 </styleClass></Button>
+                              <ImageView fitHeight="327.0" fitWidth="673.0" layoutX="341.0" layoutY="323.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../img/undraw_On_the_way_re_swjt.png" />
+                                 </image>
+                              </ImageView>
+                              <ImageView fitHeight="103.0" fitWidth="193.0" layoutX="68.0" layoutY="218.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../img/undraw_takeout_boxes_ap54.png" />
+                                 </image>
+                              </ImageView>
+                              <ImageView fitHeight="164.0" fitWidth="238.0" layoutX="790.0" layoutY="188.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../img/fast-delivery-removebg-preview.png" />
+                                 </image>
+                              </ImageView>
                            </children>
                         </Pane>
                      </children>
