--- a/src/gui/order/Dish.fxml
+++ b/src/gui/order/Dish.fxml
@@ -8,8 +8,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="order.DishController">
+<VBox xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="order.DishController">
    <children>
       <AnchorPane fx:id="dish" onMouseClicked="#click" prefHeight="215.0" prefWidth="225.0" style="-fx-background-color: #DEB887;" stylesheets="@../general/GeneralStyleSheet.css">
          <children>
@@ -17,15 +18,21 @@
                <children>
                   <HBox alignment="TOP_CENTER" prefHeight="41.0" prefWidth="165.0">
                      <children>
-                        <Label fx:id="dish_name_label" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="Fries">
+                        <Label fx:id="dish_name_label" stylesheets="@../general/GeneralStyleSheet.css" text="Fries">
                            <HBox.margin>
                               <Insets bottom="5.0" left="5.0" right="20.0" />
                            </HBox.margin>
+                           <font>
+                              <Font name="Levenim MT Bold" size="14.0" />
+                           </font>
                         </Label>
-                        <Label fx:id="dish_price_label" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="10">
+                        <Label fx:id="dish_price_label" stylesheets="@../general/GeneralStyleSheet.css" text="10">
                            <HBox.margin>
                               <Insets left="20.0" />
                            </HBox.margin>
+                           <font>
+                              <Font name="Levenim MT Bold" size="14.0" />
+                           </font>
                         </Label>
                      </children>
                      <VBox.margin>
