--- a/src/gui/order/OrderConfirmedScreen.fxml
+++ b/src/gui/order/OrderConfirmedScreen.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
@@ -8,8 +9,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-
-<VBox xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="order.OrderConfirmedController">
+<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="order.OrderConfirmedController">
    <children>
       <AnchorPane prefHeight="600.0" prefWidth="800.0" stylesheets="@../general/GeneralStyleSheet.css">
          <children>
@@ -24,10 +24,10 @@
                         </HBox>
                         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                            <children>
-                              <Separator prefHeight="3.0" prefWidth="332.0" />
+                              <Separator prefHeight="3.0" prefWidth="332.0" style="-fx-background-color: #F7C665;" />
                            </children>
                         </HBox>
-                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #fff;">
                            <children>
                               <Label styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="Your order is confirmed." />
                            </children>
@@ -39,7 +39,7 @@
                         </HBox>
                         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                            <children>
-                              <Separator prefHeight="3.0" prefWidth="355.0" />
+                              <Separator prefHeight="3.0" prefWidth="355.0" style="-fx-background-color: #F7C665;" />
                            </children>
                         </HBox>
                         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
@@ -74,7 +74,11 @@
                         </HBox>
                         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                            <children>
-                              <Button fx:id="home_btn" mnemonicParsing="false" onAction="#goHome" styleClass="btn" stylesheets="@../general/GeneralStyleSheet.css" text="Home" />
+                              <Button fx:id="home_btn" mnemonicParsing="false" onAction="#goHome" stylesheets="@../general/GeneralStyleSheet.css" text="Home">
+                                 <styleClass>
+                                    <String fx:value="ViewBtnOrange" />
+                                    <String fx:value="lbl" />
+                                 </styleClass></Button>
                            </children>
                         </HBox>
                      </children>
