--- a/src/gui/order/OrderInformationScreen.fxml
+++ b/src/gui/order/OrderInformationScreen.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
@@ -8,39 +9,53 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.control.Tooltip?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="650.0" prefWidth="1010.0" stylesheets="@../general/GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="order.OrderInformationController">
+<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="650.0" prefWidth="1010.0" style="-fx-background-color: #fff;" stylesheets="@../general/GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="order.OrderInformationController">
    <children>
       <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="650.0" prefWidth="1010.0" stylesheets="@../general/GeneralStyleSheet.css" VBox.vgrow="ALWAYS">
          <children>
             <HBox alignment="CENTER" prefHeight="168.0" prefWidth="1010.0">
                <children>
-                  <Label styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="Supply Time:">
+                  <Label styleClass="lblWitoutSize" stylesheets="@../general/GeneralStyleSheet.css" text="Supply Time:">
                      <HBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin>
+                     <font>
+                        <Font size="16.0" />
+                     </font>
                   </Label>
-                  <TextField fx:id="hour_input" prefHeight="31.0" prefWidth="106.0" promptText="Supply Hour" styleClass="text-box" stylesheets="@../general/GeneralStyleSheet.css">
+                  <TextField fx:id="hour_input" prefHeight="31.0" prefWidth="106.0" promptText="Supply Hour" stylesheets="@../general/GeneralStyleSheet.css">
                      <HBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin>
                      <tooltip>
                         <Tooltip fx:id="hour_tooltip" text="Time format: HH:MM" />
                      </tooltip>
+                     <styleClass>
+                        <String fx:value="comboBox" />
+                        <String fx:value="lbl" />
+                     </styleClass>
                   </TextField>
-                  <DatePicker fx:id="date_input" editable="false" prefHeight="31.0" prefWidth="136.0" promptText="Supply Date" styleClass="text-box" stylesheets="@../general/GeneralStyleSheet.css">
+                  <DatePicker fx:id="date_input" editable="false" prefHeight="31.0" prefWidth="136.0" promptText="Supply Date" stylesheets="@../general/GeneralStyleSheet.css">
                      <HBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin>
                      <tooltip>
                         <Tooltip fx:id="date_tooltip" text="Choose valid date" />
                      </tooltip>
+                     <styleClass>
+                        <String fx:value="text-box" />
+                        <String fx:value="lbl" />
+                     </styleClass>
                   </DatePicker>
                </children>
             </HBox>
@@ -139,8 +154,21 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
             </GridPane>
-            <Button fx:id="back_btn" layoutX="30.0" layoutY="593.0" mnemonicParsing="false" onAction="#back" styleClass="btn" stylesheets="@../general/GeneralStyleSheet.css" text="Back" />
-            <Button fx:id="continue_btn" layoutX="407.0" layoutY="512.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#continueCheckout" styleClass="btn" stylesheets="@../general/GeneralStyleSheet.css" text="Continue With Checkout" />
+            <Button fx:id="back_btn" layoutX="30.0" layoutY="591.0" mnemonicParsing="false" onAction="#back" prefHeight="36.0" prefWidth="78.0" stylesheets="@../general/GeneralStyleSheet.css" text="Back">
+               <styleClass>
+                  <String fx:value="ViewBtn" />
+                  <String fx:value="lbl" />
+               </styleClass></Button>
+            <Button fx:id="continue_btn" layoutX="407.0" layoutY="510.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#continueCheckout" prefHeight="36.0" prefWidth="183.0" stylesheets="@../general/GeneralStyleSheet.css" text="Continue With Checkout">
+               <styleClass>
+                  <String fx:value="ViewBtnOrange" />
+                  <String fx:value="lbl" />
+               </styleClass></Button>
+            <ImageView fitHeight="176.0" fitWidth="240.0" layoutX="725.0" layoutY="441.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/undraw_moving_forward_lhhd.png" />
+               </image>
+            </ImageView>
          </children>
       </Pane>
    </children>
