--- a/src/gui/order/PaymentScreen.fxml
+++ b/src/gui/order/PaymentScreen.fxml
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox prefHeight="650.0" prefWidth="1010.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="order.PaymentController">
+<VBox prefHeight="650.0" prefWidth="1010.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="order.PaymentController">
    <children>
       <BorderPane prefHeight="650.0" prefWidth="1010.0">
          <center>
@@ -20,13 +24,16 @@
                   <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" />
                   <HBox alignment="CENTER_LEFT" layoutX="228.0" layoutY="182.0">
                      <children>
-                        <RadioButton fx:id="private_btn" mnemonicParsing="false" selected="true" text="Private Order">
+                        <RadioButton fx:id="private_btn" mnemonicParsing="false" selected="true" stylesheets="@../general/GeneralStyleSheet.css" text="Private Order">
                            <toggleGroup>
                               <ToggleGroup fx:id="payment_type" />
                            </toggleGroup>
                            <HBox.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </HBox.margin>
+                           <font>
+                              <Font size="14.0" />
+                           </font>
                         </RadioButton>
                      </children>
                   </HBox>
@@ -36,33 +43,61 @@
                            <HBox.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </HBox.margin>
+                           <font>
+                              <Font size="14.0" />
+                           </font>
                         </RadioButton>
                      </children>
                   </HBox>
                   <HBox alignment="CENTER_LEFT" layoutX="236.0" layoutY="265.0">
                      <children>
-                        <TextField fx:id="employer_name_input" disable="true" promptText="Employer Name" styleClass="text-box" stylesheets="@../general/GeneralStyleSheet.css">
+                        <TextField fx:id="employer_name_input" disable="true" promptText="Employer Name" stylesheets="@../general/GeneralStyleSheet.css">
                            <HBox.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </HBox.margin>
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                           <styleClass>
+                              <String fx:value="comboBox" />
+                              <String fx:value="lbl" />
+                           </styleClass>
                         </TextField>
-                        <TextField fx:id="employer_w4c_input" disable="true" promptText="Employer W4C" styleClass="text-box" stylesheets="@../general/GeneralStyleSheet.css">
+                        <TextField fx:id="employer_w4c_input" disable="true" promptText="Employer W4C" stylesheets="@../general/GeneralStyleSheet.css">
                            <HBox.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </HBox.margin>
+                           <styleClass>
+                              <String fx:value="comboBox" />
+                              <String fx:value="lbl" />
+                           </styleClass>
                         </TextField>
                      </children>
                   </HBox>
                   <HBox alignment="CENTER" layoutX="288.0" layoutY="350.0" prefHeight="100.0" prefWidth="275.0">
                      <children>
-                        <Button fx:id="pay_btn" mnemonicParsing="false" onAction="#payAndCompleteOrder" styleClass="btn" stylesheets="@../general/GeneralStyleSheet.css" text="Pay And Complete Order">
+                        <Button fx:id="pay_btn" mnemonicParsing="false" onAction="#payAndCompleteOrder" prefHeight="38.0" prefWidth="195.0" stylesheets="@../general/GeneralStyleSheet.css" text="Pay And Complete Order">
                            <HBox.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </HBox.margin>
+                           <styleClass>
+                              <String fx:value="ViewBtnOrange" />
+                              <String fx:value="lblWitoutSize" />
+                              <String fx:value="lbl" />
+                           </styleClass>
                         </Button>
                      </children>
                   </HBox>
-                  <Button fx:id="back_btn" layoutX="22.0" layoutY="603.0" mnemonicParsing="false" onAction="#back" styleClass="btn" stylesheets="@../general/GeneralStyleSheet.css" text="Back" />
+                  <Button fx:id="back_btn" layoutX="22.0" layoutY="599.0" mnemonicParsing="false" onAction="#back" prefHeight="38.0" prefWidth="69.0" stylesheets="@../general/GeneralStyleSheet.css" text="Back">
+                     <styleClass>
+                        <String fx:value="ViewBtn" />
+                        <String fx:value="lbl" />
+                     </styleClass></Button>
+                  <ImageView fitHeight="164.0" fitWidth="199.0" layoutX="623.0" layoutY="472.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../img/MaleRegister.png" />
+                     </image>
+                  </ImageView>
                </children>
             </Pane>
          </center>
