--- a/src/gui/order/QRSimulationScreen.fxml
+++ b/src/gui/order/QRSimulationScreen.fxml
@@ -3,13 +3,16 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-
-<VBox xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="order.QRSimulationController">
+<VBox style="-fx-background-color: #ffff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="order.QRSimulationController">
    <children>
       <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0">
          <children>
@@ -19,17 +22,26 @@
                      <children>
                         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                            <children>
-                              <Label text="QR Scan Simulation" />
+                              <Label text="QR Scan Simulation" translateX="40.0">
+                                 <font>
+                                    <Font name="Levenim MT Bold" size="18.0" />
+                                 </font></Label>
+                              <ImageView fitHeight="79.0" fitWidth="81.0" pickOnBounds="true" preserveRatio="true" translateX="150.0">
+                                 <image>
+                                    <Image url="@../img/app_logo.png" />
+                                 </image>
+                              </ImageView>
+                           </children>
+                        </HBox>
+                        <Separator prefHeight="8.0" prefWidth="1299.0" style="-fx-background-color: #F7C665;" />
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                           <children>
+                              <ComboBox fx:id="w4c_cards" prefWidth="150.0" styleClass="comboBox" stylesheets="@../general/GeneralStyleSheet.css" translateY="30.0" />
                            </children>
                         </HBox>
                         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                            <children>
-                              <ComboBox fx:id="w4c_cards" prefWidth="150.0" />
-                           </children>
-                        </HBox>
-                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                           <children>
-                              <Button fx:id="insert_btn" mnemonicParsing="false" onAction="#insert" text="Insert" />
+                              <Button fx:id="insert_btn" mnemonicParsing="false" onAction="#insert" styleClass="ViewBtnOrange" stylesheets="@../general/GeneralStyleSheet.css" text="Insert" />
                            </children>
                         </HBox>
                      </children>
